# BobBuilderGPT

./: .gitignore  CA_Building_Codes.ipynb  OpenAI API test.ipynb  README.md  hello_world_openai.py  hello_world_pinecone.py  index.html  pyproject.toml
chatbot_proj/: README.md  manage.py
chatbot_proj/chatbot_app/: forms.py  views.py
chatbot_proj/chatbot_app/templates/: chat.html
chatbot_proj/chatbot_proj/: asgi.py  settings.py  urls.py  wsgi.py
embedding/: .gitignore  create_embedding.py  infer_embedder.py  utils.py
embedding/models/chapter_1_embedder/: README.md  config.json  sentence_bert_config.json  tokenizer.json
myopenai/: db.sqlite3  manage.py
myopenai/codequery/: apps.py
myopenai/myopenai/: asgi.py  settings.py  urls.py  wsgi.py
process_pdf_to_jsonl/: building_code_output.jsonl  process_pdf_to_jsonl.py
prompt_to_query/: prompt_to_query.py
queried_results_to_app_response/: queried_results_to_app_response.py
test_cases/: create_test_embedding.py  fake_building_code_output.json  fake_building_code_output.py  test_embedding.json
