[tool.poetry]
name = "bobbuildergpt"
version = "0.1.0"
description = ""
authors = ["Mike Khor <khorenghoe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
pinecone-client = "^2.2.2"
sentence-transformers = "^2.2.2"
Django = "^4.2.2"
PyPDF2 = "^3.0.1"
pandas = "^2.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
